--- a/ATV3/templates/index.html
+++ b/ATV3/templates/index.html
@@ -1,9 +1,15 @@
-<h1> Olist - Calculator </h1>
-<ol>
-    <li><a href='/sum'>Sum</a></li>
-    <li><a href='/sub'>Subtract</a></li>
-    <li><a href='/mul'>Multiply</a></li>
-    <li><a href='/div'>Divide</a></li>
-</ol>
+<html>
+    <head>
+        <title>Olist - Calculator</title>
+    </head>
 
-<a>Sum of {{number1}}</a>
+    <body>
+        <h1> Olist - Calculator </h1>
+        <ol>
+            <li><a href='/sum'>Sum</a></li>
+            <li><a href='/sub'>Subtract</a></li>
+            <li><a href='/mul'>Multiply</a></li>
+            <li><a href='/div'>Divide</a></li>
+        </ol>
+    </body>
+</html>
