inclusão uso txt e log

--- a/atv4/templates/categories.html
+++ b/atv4/templates/categories.html
@@ -4,7 +4,7 @@
 <ul>
     {% for i in categories %}
     <li>
-        <a href='/subcategories/{{i}}'>{{i}}</a>
+        <a href='/subcategories/{{i}}/{{mp}}'>{{i}}</a>
     </li>
     {%  endfor %}
 </ul>
